

======================================================================
Changes since version 3.3.x

NOTE: Use this section for changes that are NOT included in the 3.3
branch.
======================================================================


General Changes
===============

These entries apply to all relevant language mappings unless otherwise
noted.

- icegridadmin now correctly handles EOF when reading username and
  password.

- The Ice::Connection createProxy method will now create a secure
  proxy if the connection is secure and a datagram proxy if the
  connection is a datagram connection.

- Added Communicator::proxyToProperty which converts a proxy to a
  property set.

- Calling Glacier2::Router::destroySession() no longer raises an
  Ice::ConnectionLostException exception. Glacier2 doesn't forcefully
  close anymore the connection but instead relies on Glacier2
  activation connection management for client connections to close it.

- Glacier2 has been changed to allow enabling active connection
  management. Active connection management is enabled by default for
  Glacier2 client connections and if Glacier2.SessionTimeout is set.
  The ACM timeout is set to twice the value of the session timeout. If
  session timeout is disabled, ACM is also disabled for client
  connections.

- Added support for per-object adapter ACM timeout. This timeout is
  set with the <adapter>.ACM property. If not set, the connections
  from the object adapter will use by default the ACM timeout set at
  the communicator level with the Ice.ACM.Server property.

- Improved the Ice runtime invocation retry to always retry at least
  once on Ice::CloseConnectionException failures even if the retry
  limit has been reached. If retries are disabled, this ensures that
  the invocation will still be retried if it fails with an
  Ice::CloseConnectionException.

- Added Glacier2.AddConnectionContext property to enable forwarding