@@ -123,7 +123,10 @@ IceSSL_opensslPasswordCallback(char* buf, int size, int flag, void* userData)
     strncpy(buf, passwd.c_str(), sz);
     buf[sz] = '\0';
 
-    memset(&passwd[0], 0, static_cast<size_t>(passwd.size()));
+    for(string::iterator p = passwd.begin(); p != passwd.end(); ++p)
+    {
+        *p = '\0';
+    } 
 
     return sz;
 }
